--- a/drafts/ghandoura/data-exploration.ipynb
+++ b/drafts/ghandoura/data-exploration.ipynb
@@ -81,6 +81,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "id": "e060ae88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2944\n",
+      "EEG Shape: (63, 30000)\n",
+      "Not setting metadata\n",
+      "10 matching events found\n",
+      "No baseline correction applied\n",
+      "0 projection items activated\n",
+      "Using data from preloaded Raw for 10 events and 3000 original time points ...\n",
+      "3 bad epochs dropped\n",
+      "Number of parts: 7\n",
+      "(63, 3000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "data_path = Path('/data0/practical-sose23/brain-age/data/bap/preprocessed/v3.0')\n",
+    "print(len(list(data_path.rglob('*.npy'))))\n",
+    "\n",
+    "file_paths = list(data_path.rglob('*.pickle'))\n",
+    "for file_path in file_paths[:1]:\n",
+    "    with open(file_path, mode='rb') as in_file:\n",
+    "        eeg_obj = pickle.load(in_file)\n",
+    "        print('EEG Shape:', eeg_obj.get_data().shape)\n",
+    "        eeg_epochs = mne.make_fixed_length_epochs(eeg_obj, duration=30, preload=True)\n",
+    "        print('Number of parts:', len(eeg_epochs))\n",
+    "        print(eeg_epochs.get_data()[0,:,:].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "ddd75319",
    "metadata": {},
@@ -98,9 +136,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3457545/2670950836.py:5: RuntimeWarning: No coordinate information found for channels ['Fp1', 'Fp2', 'F3', 'F4', 'C3', 'C4', 'P3', 'P4', 'O1', 'O2', 'F7', 'F8', 'T7', 'T8', 'P7', 'P8', 'Fz', 'Cz', 'Pz', 'Oz', 'FC1', 'FC2', 'CP1', 'CP2', 'FC5', 'FC6', 'CP5', 'CP6', 'TP9', 'TP10', 'LE', 'RE', 'P1', 'P2', 'C1', 'C2', 'FT9', 'FT10', 'AF3', 'AF4', 'FC3', 'FC4', 'CP3', 'CP4', 'PO3', 'PO4', 'F5', 'F6', 'C5', 'C6', 'P5', 'P6', 'PO9', 'Iz', 'FT7', 'FT8', 'TP7', 'TP8', 'PO7', 'PO8', 'Fpz', 'PO10', 'CPz', 'POz']. Setting channel types to misc. To avoid this warning, set channel types explicitly.\n",
+      "/tmp/ipykernel_3831806/2670950836.py:5: RuntimeWarning: No coordinate information found for channels ['Fp1', 'Fp2', 'F3', 'F4', 'C3', 'C4', 'P3', 'P4', 'O1', 'O2', 'F7', 'F8', 'T7', 'T8', 'P7', 'P8', 'Fz', 'Cz', 'Pz', 'Oz', 'FC1', 'FC2', 'CP1', 'CP2', 'FC5', 'FC6', 'CP5', 'CP6', 'TP9', 'TP10', 'LE', 'RE', 'P1', 'P2', 'C1', 'C2', 'FT9', 'FT10', 'AF3', 'AF4', 'FC3', 'FC4', 'CP3', 'CP4', 'PO3', 'PO4', 'F5', 'F6', 'C5', 'C6', 'P5', 'P6', 'PO9', 'Iz', 'FT7', 'FT8', 'TP7', 'TP8', 'PO7', 'PO8', 'Fpz', 'PO10', 'CPz', 'POz']. Setting channel types to misc. To avoid this warning, set channel types explicitly.\n",
       "  raw = mne.io.read_raw_brainvision(file_path + '.vhdr', preload=True)\n",
-      "/tmp/ipykernel_3457545/2670950836.py:5: RuntimeWarning: Not setting positions of 64 misc channels found in montage:\n",
+      "/tmp/ipykernel_3831806/2670950836.py:5: RuntimeWarning: Not setting positions of 64 misc channels found in montage:\n",
       "['Fp1', 'Fp2', 'F3', 'F4', 'C3', 'C4', 'P3', 'P4', 'O1', 'O2', 'F7', 'F8', 'T7', 'T8', 'P7', 'P8', 'Fz', 'Cz', 'Pz', 'Oz', 'FC1', 'FC2', 'CP1', 'CP2', 'FC5', 'FC6', 'CP5', 'CP6', 'TP9', 'TP10', 'LE', 'RE', 'P1', 'P2', 'C1', 'C2', 'FT9', 'FT10', 'AF3', 'AF4', 'FC3', 'FC4', 'CP3', 'CP4', 'PO3', 'PO4', 'F5', 'F6', 'C5', 'C6', 'P5', 'P6', 'PO9', 'Iz', 'FT7', 'FT8', 'TP7', 'TP8', 'PO7', 'PO8', 'Fpz', 'PO10', 'CPz', 'POz']\n",
       "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
       "  raw = mne.io.read_raw_brainvision(file_path + '.vhdr', preload=True)\n"
@@ -125,12 +163,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(65, 300003)\n"
+      "65\n"
      ]
     }
    ],
    "source": [
-    "print(raw.get_data().shape)"
+    "bap_channel_names_path = '/data0/practical-sose23/brain-age/data/bap/bap-channel-names.txt'\n",
+    "channel_names = raw.ch_names\n",
+    "# Save each string in a separate line in a txt file\n",
+    "with open(bap_channel_names_path, \"w\") as file:\n",
+    "    for channel_name in channel_names:\n",
+    "        file.write(channel_name + \"\\n\")\n",
+    "\n",
+    "# Read all lines from the txt file and convert them to a list of strings\n",
+    "with open(bap_channel_names_path, \"r\") as file:\n",
+    "    read_strings = file.read().splitlines()\n",
+    "\n",
+    "# Print the list of strings\n",
+    "print(len(read_strings))"
    ]
   },
   {
