Cleaning up and adding code documentation

--- a/drafts/ghandoura/data-exploration.ipynb
+++ b/drafts/ghandoura/data-exploration.ipynb
@@ -150,7 +150,7 @@
     "file_path = '/data0/practical-sose23/brain-age/data/bap/raw/healthy_controls/preprocessed/Exp_eyes_closed_vpH38_eyes_closed'\n",
     "\n",
     "# Load EEG data into an MNE raw object\n",
-    "raw = mne.io.read_raw_brainvision(file_path + '.vhdr', preload=True)"
+    "raw = mne.io.read_raw_brainvision(file_path + '.vhdr', preload=True)\n"
    ]
   },
   {
@@ -243,7 +243,8 @@
    ],
    "source": [
     "raw.set_channel_types({channel: 'eeg' for channel in raw_filtered.ch_names})\n",
-    "raw.set_channel_types({\"LE\":\"misc\", \"RE\":\"misc\"})"
+    "raw.set_channel_types({\"LE\":\"misc\", \"RE\":\"misc\"})\n",
+    "\n"
    ]
   },
   {
