Modifications for the plots in the poster

--- a/drafts/ghandoura/data-augmentation.ipynb
+++ b/drafts/ghandoura/data-augmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "672de0b2",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "4a4914d6",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "617bc829",
    "metadata": {},
    "outputs": [],
@@ -43,6 +43,28 @@
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "413dec1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(63, 35476)\n"
+     ]
+    }
+   ],
+   "source": [
+    "pickled_file_path = Path('/data0/practical-sose23/brain-age/data/hbn/preprocessed/v4.0/rest/NDARZY101JNB/EEG/raw/mat_format/RestingState.pickle')\n",
+    "with open(pickled_file_path, mode='rb') as in_file:\n",
+    "    eeg_obj = pickle.load(in_file)\n",
+    "print(eeg_obj.get_data().shape)\n",
+    "pickled_file_path = Path('/data0/practical-sose23/brain-age/data/hbn/preprocessed/v4.0/rest/NDARZY101JNB/EEG/raw/mat_format/RestingState.pickle')"
    ]
   },
   {
