correct import paths

--- a/notebooks/baseline_eegnet.ipynb
+++ b/notebooks/baseline_eegnet.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "79d6df22",
    "metadata": {},
    "outputs": [
@@ -41,12 +41,15 @@
     "%autoreload 2\n",
     "\n",
     "import sys\n",
-    "sys.path.append('../../code')\n",
+    "sys.path.append('../src/utils/')\n",
     "# from preprocessing import preprocess_data\n",
     "from transforms import _compose, _randomcrop, totensor, \\\n",
     "channelwide_norm, channelwise_norm, _clamp, toimshape, \\\n",
     "_labelcenter, _labelnorm, _labelbin, _labelmultibin\n",
     "from functools import partial\n",
+    "sys.path.append('../drafts/schwarz/')\n",
+    "# from preprocessing import preprocess_data\n",
+    "\n",
     "from data import BrainAgeDataset"
    ]
   },
